<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single">
        <item
            android:id="@+id/op_inicio_c"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_inicio_postulante"
            />
        <item
            android:id="@+id/op_mi_perfil_c"
            android:icon="@drawable/outline_account_circle_24"
            android:title="@string/menu_Perfil_postulante"
            />
    </group>
    <item
        android:id="@+id/op_cerrar_sesion_c"
        android:icon="@drawable/icon_cerrar_session"
        android:title="@string/menu_cerrar_sesion_postulante"
        />
</menu>