<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".empleador.LoginEmpleadorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_titulo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_empleador"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/logo_empleador"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/article_person_24px"
            android:contentDescription="@string/Label_login_empleador"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:startIconDrawable="@drawable/alternate_email_24px">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:startIconDrawable="@drawable/key_vertical_24px"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="18dp"
            android:text="@string/iniciar_sesion"
            android:layout_marginTop="14dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_ir_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿No tienes cuenta? Regístrate"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</ScrollView>